aws/k8s.ipsec.tf

resource "aws_security_group" "master_ipsec" {
  vpc_id = aws_vpc.vpc.id
  name = "master-${var.env}-ipsec"
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "portal-${var.env}-ipsec"
  }

}
